log
Mon 06 May 2024 06:12:58 PM UTC: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
3467cc7
Mon 06 May 2024 06:23:40 PM UTC: 
 treemap.c | 32 ++++++++++++++++++++++++++++++++
 1 file changed, 32 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:50:5: error: unknown type name ‘Tree_Node’; did you mean ‘TreeNode’?
   50 |     Tree_Node* newNode = malloc(sizeof(Tree_Node));
      |     ^~~~~~~~~
      |     TreeNode
treemap.c:50:40: error: ‘Tree_Node’ undeclared (first use in this function); did you mean ‘TreeNode’?
   50 |     Tree_Node* newNode = malloc(sizeof(Tree_Node));
      |                                        ^~~~~~~~~
      |                                        TreeNode
treemap.c:50:40: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:51:12: error: request for member ‘key’ in something not a structure or union
   51 |     newNode->key = key;
      |            ^~
treemap.c:52:12: error: request for member ‘data’ in something not a structure or union
   52 |     newNode->data = data;
      |            ^~
treemap.c:52:21: error: ‘data’ undeclared (first use in this function)
   52 |     newNode->data = data;
      |                     ^~~~
treemap.c:53:12: error: request for member ‘left’ in something not a structure or union
   53 |     newNode->left = NULL;
      |            ^~
treemap.c:54:12: error: request for member ‘right’ in something not a structure or union
   54 |     newNode->right = NULL;
      |            ^~
treemap.c:57:20: error: assignment to ‘TreeNode *’ from incompatible pointer type ‘int *’ [-Werror=incompatible-pointer-types]
   57 |         tree->root = newNode;
      |                    ^
treemap.c:59:20: error: ‘temp’ undeclared (first use in this function)
   59 |         Tree_Node* temp = tree->root;
      |                    ^~~~
treemap.c:60:15: error: ‘true’ undeclared (first use in this function)
   60 |         while(true) {
      |               ^~~~
treemap.c:5:1: note: ‘true’ is defined in header ‘<stdbool.h>’; did you forget to ‘#include <stdbool.h>’?
    4 | #include "treemap.h"
  +++ |+#include <stdbool.h>
    5 | 
cc1: all warnings being treated as errors
Compilation failed
0567297
Mon 06 May 2024 06:24:49 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:51:12: error: ‘TreeNode’ has no member named ‘key’
   51 |     newNode->key = key;
      |            ^~
treemap.c:52:12: error: ‘TreeNode’ has no member named ‘data’
   52 |     newNode->data = data;
      |            ^~
treemap.c:52:21: error: ‘data’ undeclared (first use in this function)
   52 |     newNode->data = data;
      |                     ^~~~
treemap.c:52:21: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:59:9: error: unknown type name ‘Tree_Node’; did you mean ‘TreeNode’?
   59 |         Tree_Node* temp = tree->root;
      |         ^~~~~~~~~
      |         TreeNode
treemap.c:59:27: error: initialization of ‘int *’ from incompatible pointer type ‘TreeNode *’ [-Werror=incompatible-pointer-types]
   59 |         Tree_Node* temp = tree->root;
      |                           ^~~~
treemap.c:60:15: error: ‘true’ undeclared (first use in this function)
   60 |         while(true) {
      |               ^~~~
treemap.c:5:1: note: ‘true’ is defined in header ‘<stdbool.h>’; did you forget to ‘#include <stdbool.h>’?
    4 | #include "treemap.h"
  +++ |+#include <stdbool.h>
    5 | 
treemap.c:61:26: error: request for member ‘key’ in something not a structure or union
   61 |             if(key < temp->key) {
      |                          ^~
treemap.c:62:24: error: request for member ‘left’ in something not a structure or union
   62 |                 if(temp->left == NULL) {
      |                        ^~
treemap.c:63:25: error: request for member ‘left’ in something not a structure or union
   63 |                     temp->left = newNode;
      |                         ^~
treemap.c:66:32: error: request for member ‘left’ in something not a structure or union
   66 |                     temp = temp->left;
      |                                ^~
treemap.c:68:33: error: request for member ‘key’ in something not a structure or union
   68 |             } else if(key > temp->key) {
      |                                 ^~
treemap.c:69:24: error: request for member ‘right’ in something not a structure or union
   69 |                 if(temp->right == NULL) {
      |                        ^~
treemap.c:70:25: error: request for member ‘right’ in something not a structure or union
   70 |                     temp->right = newNode;
      |                         ^~
treemap.c:73:32: error: request for member ‘right’ in something not a structure or union
   73 |                     temp = temp->right;
      |                                ^~
treemap.c:76:21: error: request for member ‘data’ in something not a structure or union
   76 |                 temp->data = data;
      |                     ^~
cc1: all warnings being treated as errors
Compilation failed
fd894ea
Mon 06 May 2024 06:25:05 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:51:12: error: ‘TreeNode’ has no member named ‘key’
   51 |     newNode->key = key;
      |            ^~
treemap.c:52:12: error: ‘TreeNode’ has no member named ‘data’
   52 |     newNode->data = data;
      |            ^~
treemap.c:52:21: error: ‘data’ undeclared (first use in this function)
   52 |     newNode->data = data;
      |                     ^~~~
treemap.c:52:21: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:60:15: error: ‘true’ undeclared (first use in this function)
   60 |         while(true) {
      |               ^~~~
treemap.c:5:1: note: ‘true’ is defined in header ‘<stdbool.h>’; did you forget to ‘#include <stdbool.h>’?
    4 | #include "treemap.h"
  +++ |+#include <stdbool.h>
    5 | 
treemap.c:61:26: error: ‘TreeNode’ has no member named ‘key’
   61 |             if(key < temp->key) {
      |                          ^~
treemap.c:68:33: error: ‘TreeNode’ has no member named ‘key’
   68 |             } else if(key > temp->key) {
      |                                 ^~
treemap.c:76:21: error: ‘TreeNode’ has no member named ‘data’
   76 |                 temp->data = data;
      |                     ^~
Compilation failed
7902eee
Mon 06 May 2024 06:30:52 PM UTC: 
 treemap.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
In file included from test.c:4:
test.c: In function ‘insertTreeMap’:
treemap.c:51:12: error: ‘*newNode.pair’ is used uninitialized [-Werror=uninitialized]
   51 |     newNode->pair->key = key;
      |     ~~~~~~~^~~~~~
treemap.c:52:12: error: ‘*newNode.pair’ is used uninitialized [-Werror=uninitialized]
   52 |     newNode->pair->value = value;
      |     ~~~~~~~^~~~~~
cc1: all warnings being treated as errors
Compilation failed
c73207b
Mon 06 May 2024 06:43:26 PM UTC: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:
test.c: In function ‘insertTreeMap’:
treemap.c:51:12: error: ‘*newNode.pair’ is used uninitialized [-Werror=uninitialized]
   51 |     newNode->pair->key = key;
      |     ~~~~~~~^~~~~~
treemap.c:52:12: error: ‘*newNode.pair’ is used uninitialized [-Werror=uninitialized]
   52 |     newNode->pair->value = value;
      |     ~~~~~~~^~~~~~
cc1: all warnings being treated as errors
Compilation failed
4172213
Thu 09 May 2024 01:00:38 AM UTC: 
 treemap.c | 13 ++++++-------
 1 file changed, 6 insertions(+), 7 deletions(-)
test.c: In function ‘insertTreeMap’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
0ac1a0a
Thu 09 May 2024 01:02:12 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  7|6
total_score: 5/70
31fa6b0
